# rainflow

./: .gitignore  LICENSE  README.md  rainflow.cabal  stack.yaml
src/: Main.hs
src/rainflow/: RainFlow.hs
