name:                rainflow
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/monteemc/rainflow#readme
license:             BSD3
license-file:        LICENSE
author:              Fabio 'Monte' Sant'Anna
maintainer:          fsantanna@zoho.com
copyright:           Copyright (c) 2017 Fabio 'Monte' Sant'Anna
category:            Engineering
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     RainFlow
  hs-source-dirs:      src/rainflow
  build-depends:       base >=4.7 && < 5
                     , vector
                     , containers
  default-language:    Haskell2010
  ghc-options:         -fwarn-tabs -fwarn-unused-imports -fwarn-missing-signatures
                       -fwarn-name-shadowing -fwarn-incomplete-patterns

executable rf
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , rainflow
  ghc-options:         -fwarn-tabs -fwarn-unused-imports -fwarn-missing-signatures
                       -fwarn-name-shadowing -fwarn-incomplete-patterns


-- test-suite hspec
--    build-depends:    base, rainflow, hspec == 1.8.*
--    default-language: Haskell2010
--    hs-source-dirs:   test-suite
--    main-is:          Spec.hs
--    type:             exitcode-stdio-1.0

-- benchmark criterion
--     build-depends:    base, rainflow, criterion == 0.6.*
--     default-language: Haskell2010
--     hs-source-dirs:   benchmark
--     main-is:          Bench.hs
--     type:             exitcode-stdio-1.0
